# Liquid-State-Dataspace-Connector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: host-ci.yml  linux-xdp.yml  nitro-integration.yml  risc0-ci.yml  zk-nightly.yml
apps/control-plane-api/: Cargo.toml
apps/control-plane-api/src/: config.rs  lib.rs  main.rs  store.rs
apps/control-plane-api/tests/: http_api_tests.rs  risc0_http_tests.rs
apps/liquid-agent/: Cargo.toml  build.rs
apps/liquid-agent/proto/: liquid_agent.proto
apps/liquid-agent/src/: client.rs  config.rs  lib.rs  main.rs  server.rs
apps/liquid-agent/tests/: agent_tests.rs  linux_agent_tests.rs
configs/phase3/: tier-a-agent.toml  tier-a-api.toml  tier-b-agent.toml  tier-b-api.toml  tier-c-agent.toml  tier-c-api.toml
crates/control-plane/: Cargo.toml  build.rs
crates/control-plane-http/: Cargo.toml
crates/control-plane-http/src/: bootstrap.rs  error.rs  job_runner.rs  lib.rs  router.rs  state.rs
crates/control-plane-http/src/handlers/: contracts.rs  evidence.rs  execution.rs  lineage.rs  settlement.rs  transfers.rs
crates/control-plane-store/: Cargo.toml
crates/control-plane-store/src/: agreements_repo.rs  db.rs  evidence_repo.rs  execution_overlay_repo.rs  lib.rs  lineage_jobs_repo.rs  migrations.rs  ser.rs  settlements_repo.rs  transfers_repo.rs
crates/control-plane-store/tests/: store_characterization_tests.rs
crates/control-plane/examples/: pricing_smoke.rs
crates/control-plane/src/: agreement_service.rs  breach_service.rs  execution_pipeline.rs  lib.rs  lineage_job_service.rs  negotiation.rs  orchestrator.rs  pricing.rs  pricing_service.rs
crates/control-plane/tests/: negotiation_tests.rs  orchestrator_tests.rs  pricing_tests.rs
crates/liquid-agent-grpc/: Cargo.toml
crates/liquid-agent-grpc/proto/: liquid_agent.proto
crates/liquid-agent-grpc/src/: client.rs  lib.rs  server.rs
crates/liquid-data-plane/agent-core/: Cargo.toml
crates/liquid-data-plane/agent-core/src/: compiler.rs  lib.rs  loader.rs  maps.rs  planner.rs  projection.rs  runtime.rs  service.rs
crates/liquid-data-plane/agent-core/src/backend/: linux_xdp.rs  mod.rs  simulated.rs
crates/liquid-data-plane/agent-core/tests/: compiler_tests.rs  linux_xdp_tests.rs
crates/liquid-data-plane/ebpf/: Cargo.toml
crates/liquid-data-plane/ebpf/src/: main.rs
crates/liquid-data-plane/host/: Cargo.toml
crates/liquid-data-plane/host/src/: loader.rs  maps.rs
crates/liquid-data-plane/host/tests/: compiler_tests.rs  linux_xdp_tests.rs
crates/liquid-data-plane/liquid-data-plane-ebpf/: Cargo.toml
crates/liquid-data-plane/liquid-data-plane-ebpf/src/: main.rs
crates/lsdc-common/: Cargo.toml
crates/lsdc-common/src/: error.rs  execution.rs  fixtures.rs  lib.rs  liquid.rs  proof.rs  service.rs  traits.rs
crates/lsdc-common/src/crypto/: mod.rs
crates/lsdc-common/src/dsp/: mod.rs
crates/lsdc-common/src/identity/: mod.rs
crates/lsdc-common/src/odrl/: ast.rs  parser.rs
crates/lsdc-common/tests/: odrl_parser_tests.rs  policy_execution_tests.rs
crates/lsdc-config/: Cargo.toml
crates/lsdc-config/src/: lib.rs
crates/lsdc-contracts/: Cargo.toml
crates/lsdc-contracts/src/: lib.rs
crates/lsdc-evidence/: Cargo.toml
crates/lsdc-evidence/src/: canonical.rs  crypto.rs  lib.rs  proof.rs
crates/lsdc-execution-protocol/: Cargo.toml
crates/lsdc-execution-protocol/src/: lib.rs
crates/lsdc-execution-protocol/tests/: commitment_tests.rs
crates/lsdc-policy/: Cargo.toml
crates/lsdc-policy/src/: error.rs  execution.rs  lib.rs  liquid.rs  profile.rs
crates/lsdc-policy/src/odrl/: ast.rs  parser.rs
crates/lsdc-policy/tests/: execution_tests.rs  profile_tests.rs
crates/lsdc-ports/: Cargo.toml
crates/lsdc-ports/src/: lib.rs
crates/lsdc-runtime-model/: Cargo.toml
crates/lsdc-runtime-model/src/: lib.rs
crates/lsdc-service-types/: Cargo.toml
crates/lsdc-service-types/src/: lib.rs
crates/proof-plane/core/: Cargo.toml
crates/proof-plane/core/src/: lib.rs
crates/proof-plane/dev/: Cargo.toml
crates/proof-plane/host/: Cargo.toml  build.rs
crates/proof-plane/host/src/: dev.rs  lib.rs  risc0.rs  tests.rs
crates/proof-plane/proof-plane-guest/: Cargo.toml
crates/proof-plane/proof-plane-host/: Cargo.toml
crates/proof-plane/risc0/: Cargo.toml
crates/proof-plane/risc0-guest/: Cargo.toml
crates/proof-plane/risc0-guest/src/: main.rs  receipt_composition.rs  recursive_transform.rs  shared.rs
crates/proof-plane/risc0-model/: Cargo.toml
crates/proof-plane/risc0/src/: lib.rs
crates/proof-plane/risc0/tests/: default_feature_tests.rs
crates/proof-plane/transform-kernel/: Cargo.toml
crates/receipt-log/: Cargo.toml
crates/receipt-log/src/: lib.rs
crates/tee-orchestrator/: Cargo.toml
crates/tee-orchestrator/src/: attestation.rs  enclave.rs  forgetting.rs  forgetting_attested_teardown.rs  forgetting_dev_signature.rs  key_release.rs  lib.rs  nitro.rs  session.rs
docs/: architecture.md  current-state.md  next-milestone.md  phase3-reference-stack.md  roadmap.md  vision.md
docs/archive/: 2026-03-06-lsdc-architecture-design.md  2026-03-06-lsdc-implementation-plan.md
docs/plans/: 2026-03-06-lsdc-architecture-design.md  2026-03-06-lsdc-implementation-plan.md
docs/research/: README.md  pillar-1-selector-aware-transport.md  pillar-2-recursive-proof-plane.md  pillar-3-tee-attestation-broker.md  pillar-4-pricing-oracle.md
docs/spec/: execution-overlay.md  odrl-profile.md
fixtures/csv/: lineage_input.csv
fixtures/liquid/: analytics_manifest.json
fixtures/nitro/: live_attestation_material.json
fixtures/odrl/: supported_policy.json
fixtures/proof/: expected_redacted.csv
proto/pricing/v1/: pricing.proto
python/pricing-oracle/: pyproject.toml
python/pricing-oracle/lsdc_pricing_oracle/: server.py  shapley.py
python/pricing-oracle/src/: proto_loader.py  server.py  shapley.py
python/pricing-oracle/src/proto/: pricing.proto
python/pricing-oracle/tests/: test_server.py  test_server_guard.py  test_shapley.py
scripts/: bootstrap-ubuntu.sh  run-phase3-demo.sh  smoke-pricing-oracle.sh
xtask/src/: main.rs
(+14 files in other folders)
