[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/lsdc-common",
    "crates/control-plane",
    "crates/liquid-data-plane/liquid-data-plane",
    "crates/proof-plane/proof-plane-host",
    "crates/tee-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
