[workspace]
resolver = "2"
members = [
    "xtask",
    "apps/liquid-agent",
    "apps/control-plane-api",
    "crates/lsdc-contracts",
    "crates/lsdc-policy",
    "crates/lsdc-evidence",
    "crates/lsdc-config",
    "crates/lsdc-common",
    "crates/lsdc-ports",
    "crates/lsdc-service-types",
    "crates/liquid-agent-grpc",
    "crates/control-plane",
    "crates/control-plane-http",
    "crates/control-plane-store",
    "crates/liquid-data-plane/agent-core",
    "crates/liquid-data-plane/ebpf",
    "crates/proof-plane/core",
    "crates/proof-plane/dev",
    "crates/proof-plane/host",
    "crates/proof-plane/risc0",
    "crates/proof-plane/transform-kernel",
    "crates/tee-orchestrator",
]
default-members = [
    "xtask",
    "apps/liquid-agent",
    "apps/control-plane-api",
    "crates/lsdc-contracts",
    "crates/lsdc-policy",
    "crates/lsdc-evidence",
    "crates/lsdc-config",
    "crates/lsdc-common",
    "crates/lsdc-ports",
    "crates/lsdc-service-types",
    "crates/liquid-agent-grpc",
    "crates/control-plane",
    "crates/control-plane-http",
    "crates/control-plane-store",
    "crates/liquid-data-plane/agent-core",
    "crates/proof-plane/core",
    "crates/proof-plane/dev",
    "crates/proof-plane/host",
    "crates/tee-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
