[package]
name = "control-plane-api"
version.workspace = true
edition.workspace = true

[features]
default = []
risc0 = ["control-plane-http/risc0"]

[dependencies]
control-plane-http = { path = "../../crates/control-plane-http" }
control-plane-store = { path = "../../crates/control-plane-store" }
lsdc-config = { path = "../../crates/lsdc-config" }
lsdc-common = { path = "../../crates/lsdc-common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
liquid-agent-grpc = { path = "../../crates/liquid-agent-grpc" }
lsdc-ports = { path = "../../crates/lsdc-ports" }
lsdc-service-types = { path = "../../crates/lsdc-service-types" }
proof-plane-host = { path = "../../crates/proof-plane/host" }
tee-orchestrator = { path = "../../crates/tee-orchestrator" }
liquid-agent-core = { path = "../../crates/liquid-data-plane/agent-core" }
async-trait = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
