[package]
name = "liquid-agent"
version.workspace = true
edition.workspace = true

[dependencies]
liquid-data-plane = { path = "../../crates/liquid-data-plane/host" }
lsdc-common = { path = "../../crates/lsdc-common" }
tokio = { workspace = true }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
