[package]
name = "liquid-agent"
version.workspace = true
edition.workspace = true

[dependencies]
liquid-agent-grpc = { path = "../../crates/liquid-agent-grpc" }
liquid-data-plane = { path = "../../crates/liquid-data-plane/host" }
lsdc-common = { path = "../../crates/lsdc-common" }
lsdc-ports = { path = "../../crates/lsdc-ports" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
