[package]
name = "liquid-agent"
version.workspace = true
edition.workspace = true

[dependencies]
liquid-agent-grpc = { path = "../../crates/liquid-agent-grpc" }
liquid-agent-core = { path = "../../crates/liquid-data-plane/agent-core" }
lsdc-config = { path = "../../crates/lsdc-config" }
lsdc-common = { path = "../../crates/lsdc-common" }
lsdc-ports = { path = "../../crates/lsdc-ports" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
