[package]
name = "control-plane-http"
version.workspace = true
edition.workspace = true

[features]
default = []
risc0 = ["proof-plane-host/risc0"]

[dependencies]
control-plane = { path = "../control-plane" }
control-plane-store = { path = "../control-plane-store" }
liquid-agent-grpc = { path = "../liquid-agent-grpc" }
lsdc-common = { path = "../lsdc-common" }
lsdc-config = { path = "../lsdc-config" }
lsdc-ports = { path = "../lsdc-ports" }
lsdc-service-types = { path = "../lsdc-service-types" }
proof-plane-core = { path = "../proof-plane/core" }
proof-plane-host = { path = "../proof-plane/host" }
receipt-log = { path = "../receipt-log" }
tee-orchestrator = { path = "../tee-orchestrator" }
aws-config = { version = "=1.5.0", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-kms = "=1.56.0"
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
hex = { workspace = true }
