[package]
name = "control-plane-store"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-common = { path = "../lsdc-common" }
lsdc-ports = { path = "../lsdc-ports" }
lsdc-service-types = { path = "../lsdc-service-types" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
uuid = { workspace = true }
