[package]
name = "control-plane"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-common = { path = "../lsdc-common" }
liquid-data-plane = { path = "../liquid-data-plane/liquid-data-plane" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
