[package]
name = "control-plane"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-common = { path = "../lsdc-common" }
lsdc-ports = { path = "../lsdc-ports" }
tee-orchestrator = { path = "../tee-orchestrator" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proof-plane-host = { path = "../proof-plane/host" }
liquid-data-plane = { path = "../liquid-data-plane/host" }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
