[package]
name = "liquid-agent-grpc"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-common = { path = "../lsdc-common" }
lsdc-ports = { path = "../lsdc-ports" }
tokio = { workspace = true }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
