[package]
name = "lsdc-common"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-contracts = { path = "../lsdc-contracts" }
lsdc-policy = { path = "../lsdc-policy" }
lsdc-evidence = { path = "../lsdc-evidence" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
