[package]
name = "lsdc-common"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-contracts = { path = "../lsdc-contracts" }
lsdc-policy = { path = "../lsdc-policy" }
lsdc-evidence = { path = "../lsdc-evidence" }
lsdc-execution-protocol = { path = "../lsdc-execution-protocol" }
lsdc-runtime-model = { path = "../lsdc-runtime-model" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
