[package]
name = "lsdc-evidence"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-policy = { path = "../lsdc-policy" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
