[package]
name = "receipt-log"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-evidence = { path = "../lsdc-evidence" }
lsdc-execution-protocol = { path = "../lsdc-execution-protocol" }
lsdc-ports = { path = "../lsdc-ports" }
lsdc-policy = { path = "../lsdc-policy" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
