[package]
name = "tee-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
lsdc-common = { path = "../lsdc-common" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
zeroize = "1"
