[project]
name = "lsdc-pricing-oracle"
version = "0.1.0"
description = "Shapley value-based dynamic data pricing oracle for LSDC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "grpcio>=1.59",
    "grpcio-tools>=1.59",
    "numpy>=1.26",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
