[package]
name = "proof-plane-host"
version.workspace = true
edition.workspace = true

[features]
default = []
risc0 = ["dep:bincode", "dep:risc0-zkvm"]

[dependencies]
lsdc-common = { path = "../../lsdc-common" }
lsdc-ports = { path = "../../lsdc-ports" }
proof-plane-core = { path = "../core" }
proof-plane-risc0-model = { path = "../risc0-model" }
proof-transform-kernel = { path = "../transform-kernel" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
bincode = { version = "1.3", optional = true }
risc0-zkvm = { version = "5.0.0-rc.1", default-features = false, features = ["std", "prove"], optional = true }

[build-dependencies]
risc0-build = "5.0.0-rc.1"

[package.metadata.risc0]
methods = ["../risc0-guest"]
