[package]
name = "proof-plane-risc0-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "csv_transform"
path = "src/main.rs"

[[bin]]
name = "receipt_composition"
path = "src/receipt_composition.rs"

[dependencies]
lsdc-common = { path = "../../lsdc-common" }
proof-plane-risc0-model = { path = "../risc0-model" }
proof-transform-kernel = { path = "../transform-kernel" }
risc0-zkvm = { version = "5.0.0-rc.1", default-features = false, features = ["std"] }
serde_json = "1"
bincode = { version = "1.3", default-features = false }
